// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The application-review page matches the last snapshot (with review sidebar closed) 1`] = `
<Relay(DefaultLayout)
  disableHelpButton={true}
  fixedHeader={true}
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "userGroups": Array [
        "Incentive Analyst",
      ],
    }
  }
  width="wide"
>
  <Row
    noGutters={false}
  >
    <div
      className="jsx-3733722573 
             col-md-10
             col-lg-10
             col-xxl-10
             offset-md-1
             offset-lg-1"
      id="application-body"
    >
      <div
        className="jsx-3733722573 col-xxl-6 col-xl-7 col-lg-8 col-md-10"
        id="title"
      >
        <h1
          className="jsx-3733722573"
        >
          Application #1
        </h1>
        <p
          className="jsx-3733722573"
        >
          <span
            className="jsx-3733722573"
          >
            BC GHG ID: 
            456
          </span>
        </p>
      </div>
      <Relay(ApplicationReviewStepSelector)
        applicationReviewSteps={
          Object {
            " $fragmentRefs": Object {
              "ApplicationReviewStepSelector_applicationReviewSteps": true,
            },
            "edges": Array [
              Object {
                "node": Object {
                  " $fragmentRefs": Object {
                    "ReviewSidebar_applicationReviewStep": true,
                  },
                  "id": "abc",
                },
              },
            ],
          }
        }
        decisionOrChangeRequestStatus="SUBMITTED"
        newerDraftExists={false}
        onDecisionOrChangeRequestAction={[Function]}
        onSelectStep={[Function]}
        selectedStep={null}
      />
      <Row
        noGutters={false}
        style={
          Object {
            "marginTop": 30,
          }
        }
      >
        <ApplicationOverrideNotification
          overrideJustification={null}
        />
      </Row>
      <hr
        className="jsx-3733722573"
      />
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
              "IncentiveCalculatorContainer_applicationRevision": true,
            },
            "applicationRevisionStatus": Object {
              "applicationRevisionStatus": "SUBMITTED",
              "id": "jkl",
            },
            "id": "xyz",
            "isCurrentVersion": true,
            "overrideJustification": null,
            "versionNumber": 1,
          }
        }
        diffQuery={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_diffQuery": true,
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ApplicationDetailsContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                " $fragmentRefs": Object {
                  "ApplicationReviewStepSelector_applicationReviewSteps": true,
                },
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs": Object {
                        "ReviewSidebar_applicationReviewStep": true,
                      },
                      "id": "abc",
                    },
                  },
                ],
              },
              "applicationRevision": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                  "IncentiveCalculatorContainer_applicationRevision": true,
                },
                "applicationRevisionStatus": Object {
                  "applicationRevisionStatus": "SUBMITTED",
                  "id": "jkl",
                },
                "id": "xyz",
                "isCurrentVersion": true,
                "overrideJustification": null,
                "versionNumber": 1,
              },
              "facilityByFacilityId": Object {
                "bcghgid": "456",
              },
              "reviewRevisionStatus": Object {
                " $fragmentRefs": Object {
                  "ApplicationRevisionStatusContainer_applicationRevisionStatus": true,
                },
                "applicationRevisionStatus": "SUBMITTED",
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "userGroups": Array [
                "Incentive Analyst",
              ],
            },
          }
        }
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_diffQuery": true,
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ApplicationDetailsContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                " $fragmentRefs": Object {
                  "ApplicationReviewStepSelector_applicationReviewSteps": true,
                },
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs": Object {
                        "ReviewSidebar_applicationReviewStep": true,
                      },
                      "id": "abc",
                    },
                  },
                ],
              },
              "applicationRevision": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                  "IncentiveCalculatorContainer_applicationRevision": true,
                },
                "applicationRevisionStatus": Object {
                  "applicationRevisionStatus": "SUBMITTED",
                  "id": "jkl",
                },
                "id": "xyz",
                "isCurrentVersion": true,
                "overrideJustification": null,
                "versionNumber": 1,
              },
              "facilityByFacilityId": Object {
                "bcghgid": "456",
              },
              "reviewRevisionStatus": Object {
                " $fragmentRefs": Object {
                  "ApplicationRevisionStatusContainer_applicationRevisionStatus": true,
                },
                "applicationRevisionStatus": "SUBMITTED",
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "userGroups": Array [
                "Incentive Analyst",
              ],
            },
          }
        }
        review={true}
      />
      <Relay(IncentiveCalculator)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
              "IncentiveCalculatorContainer_applicationRevision": true,
            },
            "applicationRevisionStatus": Object {
              "applicationRevisionStatus": "SUBMITTED",
              "id": "jkl",
            },
            "id": "xyz",
            "isCurrentVersion": true,
            "overrideJustification": null,
            "versionNumber": 1,
          }
        }
      />
      <OverlayTrigger
        defaultShow={false}
        overlay={[Function]}
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <Button
          active={false}
          aria-label="Return to top of page"
          disabled={false}
          id="to-top"
          onClick={[Function]}
          type="button"
          variant="dark"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f062",
                  "M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z",
                ],
                "iconName": "arrow-up",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size="lg"
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </Button>
      </OverlayTrigger>
    </div>
    <HelpButton
      isInternalUser={true}
    />
    <DecisionModal
      currentStatus="SUBMITTED"
      onDecision={[Function]}
      onHide={[Function]}
      show={false}
    />
  </Row>
  <JSXStyle
    id="3733722573"
  >
    h1.jsx-3733722573{margin-bottom:0.75rem;}#title.jsx-3733722573{margin-bottom:20px;padding-left:0;}#title.jsx-3733722573 p.jsx-3733722573{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;line-height:2rem;color:#555;}#revised-tag.jsx-3733722573{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;margin-right:1rem;color:#0053b3;padding:0.25rem 0.5rem;font-size:0.875rem;line-height:1.5;border:1px solid currentColor;border-radius:0.2rem;}button#to-top{border-radius:50%;position:fixed;bottom:0.6rem;left:0.6rem;width:50px;height:50px;box-shadow:0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.4);}
  </JSXStyle>
</Relay(DefaultLayout)>
`;

exports[`The application-review page matches the last snapshot (with review sidebar opened) 1`] = `
<Relay(DefaultLayout)
  disableHelpButton={true}
  fixedHeader={true}
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "userGroups": Array [
        "Incentive Analyst",
      ],
    }
  }
  width="wide"
>
  <Row
    noGutters={false}
  >
    <div
      className="jsx-3733722573 
             col-md-7
             col-lg-8
             col-xxl-9
             offset-md-0
             offset-lg-0"
      id="application-body"
    >
      <div
        className="jsx-3733722573 col-xxl-6 col-xl-7 col-lg-8 col-md-10"
        id="title"
      >
        <h1
          className="jsx-3733722573"
        >
          Application #1
        </h1>
        <p
          className="jsx-3733722573"
        >
          <span
            className="jsx-3733722573"
          >
            BC GHG ID: 
            456
          </span>
        </p>
      </div>
      <Relay(ApplicationReviewStepSelector)
        applicationReviewSteps={
          Object {
            " $fragmentRefs": Object {
              "ApplicationReviewStepSelector_applicationReviewSteps": true,
            },
            "edges": Array [
              Object {
                "node": Object {
                  " $fragmentRefs": Object {
                    "ReviewSidebar_applicationReviewStep": true,
                  },
                  "id": "abc",
                },
              },
            ],
          }
        }
        decisionOrChangeRequestStatus="SUBMITTED"
        newerDraftExists={false}
        onDecisionOrChangeRequestAction={[Function]}
        onSelectStep={[Function]}
        selectedStep={null}
      />
      <Row
        noGutters={false}
        style={
          Object {
            "marginTop": 30,
          }
        }
      >
        <ApplicationOverrideNotification
          overrideJustification={null}
        />
      </Row>
      <hr
        className="jsx-3733722573"
      />
      <Relay(ApplicationDetailsComponent)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
              "IncentiveCalculatorContainer_applicationRevision": true,
            },
            "applicationRevisionStatus": Object {
              "applicationRevisionStatus": "SUBMITTED",
              "id": "jkl",
            },
            "id": "xyz",
            "isCurrentVersion": true,
            "overrideJustification": null,
            "versionNumber": 1,
          }
        }
        diffQuery={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_diffQuery": true,
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ApplicationDetailsContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                " $fragmentRefs": Object {
                  "ApplicationReviewStepSelector_applicationReviewSteps": true,
                },
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs": Object {
                        "ReviewSidebar_applicationReviewStep": true,
                      },
                      "id": "abc",
                    },
                  },
                ],
              },
              "applicationRevision": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                  "IncentiveCalculatorContainer_applicationRevision": true,
                },
                "applicationRevisionStatus": Object {
                  "applicationRevisionStatus": "SUBMITTED",
                  "id": "jkl",
                },
                "id": "xyz",
                "isCurrentVersion": true,
                "overrideJustification": null,
                "versionNumber": 1,
              },
              "facilityByFacilityId": Object {
                "bcghgid": "456",
              },
              "reviewRevisionStatus": Object {
                " $fragmentRefs": Object {
                  "ApplicationRevisionStatusContainer_applicationRevisionStatus": true,
                },
                "applicationRevisionStatus": "SUBMITTED",
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "userGroups": Array [
                "Incentive Analyst",
              ],
            },
          }
        }
        liveValidate={false}
        query={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_diffQuery": true,
              "ApplicationDetailsContainer_query": true,
            },
            "application": Object {
              " $fragmentRefs": Object {
                "ApplicationDetailsContainer_application": true,
              },
              "applicationReviewStepsByApplicationId": Object {
                " $fragmentRefs": Object {
                  "ApplicationReviewStepSelector_applicationReviewSteps": true,
                },
                "edges": Array [
                  Object {
                    "node": Object {
                      " $fragmentRefs": Object {
                        "ReviewSidebar_applicationReviewStep": true,
                      },
                      "id": "abc",
                    },
                  },
                ],
              },
              "applicationRevision": Object {
                " $fragmentRefs": Object {
                  "ApplicationDetailsContainer_applicationRevision": true,
                  "IncentiveCalculatorContainer_applicationRevision": true,
                },
                "applicationRevisionStatus": Object {
                  "applicationRevisionStatus": "SUBMITTED",
                  "id": "jkl",
                },
                "id": "xyz",
                "isCurrentVersion": true,
                "overrideJustification": null,
                "versionNumber": 1,
              },
              "facilityByFacilityId": Object {
                "bcghgid": "456",
              },
              "reviewRevisionStatus": Object {
                " $fragmentRefs": Object {
                  "ApplicationRevisionStatusContainer_applicationRevisionStatus": true,
                },
                "applicationRevisionStatus": "SUBMITTED",
              },
              "rowId": 1,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "userGroups": Array [
                "Incentive Analyst",
              ],
            },
          }
        }
        review={true}
      />
      <Relay(IncentiveCalculator)
        applicationRevision={
          Object {
            " $fragmentRefs": Object {
              "ApplicationDetailsContainer_applicationRevision": true,
              "IncentiveCalculatorContainer_applicationRevision": true,
            },
            "applicationRevisionStatus": Object {
              "applicationRevisionStatus": "SUBMITTED",
              "id": "jkl",
            },
            "id": "xyz",
            "isCurrentVersion": true,
            "overrideJustification": null,
            "versionNumber": 1,
          }
        }
      />
      <OverlayTrigger
        defaultShow={false}
        overlay={[Function]}
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <Button
          active={false}
          aria-label="Return to top of page"
          disabled={false}
          id="to-top"
          onClick={[Function]}
          type="button"
          variant="dark"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f062",
                  "M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z",
                ],
                "iconName": "arrow-up",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size="lg"
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </Button>
      </OverlayTrigger>
    </div>
    <Relay(ReviewSidebar)
      isFinalized={false}
      onClose={[Function]}
    />
    <DecisionModal
      currentStatus="SUBMITTED"
      onDecision={[Function]}
      onHide={[Function]}
      show={false}
    />
  </Row>
  <JSXStyle
    id="3733722573"
  >
    h1.jsx-3733722573{margin-bottom:0.75rem;}#title.jsx-3733722573{margin-bottom:20px;padding-left:0;}#title.jsx-3733722573 p.jsx-3733722573{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;line-height:2rem;color:#555;}#revised-tag.jsx-3733722573{-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;margin-right:1rem;color:#0053b3;padding:0.25rem 0.5rem;font-size:0.875rem;line-height:1.5;border:1px solid currentColor;border-radius:0.2rem;}button#to-top{border-radius:50%;position:fixed;bottom:0.6rem;left:0.6rem;width:50px;height:50px;box-shadow:0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.4);}
  </JSXStyle>
</Relay(DefaultLayout)>
`;
